header done -fix pfp alignment

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     height: 100vh;
     display: grid;
     grid-template-columns: minmax(200px, 1fr) 3fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 200px auto;
 }
 
 /* SIDEBAR */
@@ -62,6 +62,7 @@ li.nav:nth-child(7) {
     padding: 20px 20px;
     display: grid;
     grid-template: 1fr 1fr / 1fr 1fr;
+    position: sticky;
 }
 
 .search-bar {
@@ -72,23 +73,29 @@ li.nav:nth-child(7) {
     height: 25px;
 }
 
-.search-icon {
+.header-icons {
     fill: var(--font-color);
     margin-left: 30px;
+    height: 25px;
 }
 
 .search-bar > input {
     border: none;
     border-radius: 20px;
     height: 25px;
-    width: calc(400px + 0.9vw);
+    width: calc(400px - 0.5vw);
     background-color: #e1e8f0;
+}
+
+.search-bar > input:active {
+    border: 1px solid var(--blue);
 }
 
 /* FIX SEARCH BAR BORDER COLOR WHEN FOCUSED */
 
 .profile-info {
     display: flex;
+    margin-left: 30px;
 }
 
 .profile-picture {
@@ -97,6 +104,20 @@ li.nav:nth-child(7) {
     padding: 15px;
     border-radius: 50%;
     margin-right: 20px;
+}
+
+.pfp-small {
+    height: 25px;
+    padding: 10px;
+
+}
+
+.notif {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    font-weight: 700;
+    margin-right: 3dvh;
 }
 
 .greeting {
@@ -109,6 +130,11 @@ li.nav:nth-child(7) {
 }
 
 .action-buttons {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-right: 15px;
+
 
 }
 
@@ -118,6 +144,7 @@ li.nav:nth-child(7) {
     border-radius: 45px;
     background-color: var(--blue);
     color: white;
+    margin: 0px 5px;
 }
 
 
